    - added optional 3rd party user data parameter for following
      liblinuxsampler C++ API methods: InstrumentEditor::Main(),
      InstrumentEditor::Launch(),
      InstrumentManager::LaunchInstrumentEditor()
    - theoretical fix: made SynchronizedConfig follow C++0x memory
      model more strictly
    - fixes for using large audio device buffers

  * audio driver:
    - removed the nonsense audio channel constraint (which was hard coded to
      max. 100 audio channels) for most audio drivers
    - JACK audio driver did not offer a device parameter "SAMPLERATE" as
      opposed to the LSCP specs
    - bugfix: the SAMPLERATE parameter of some drivers (e.g. JACK)
      reflected the wrong value
    - fixed a memory management bug in ASIO driver
    - Makefile fix: JACK_CFLAGS wasn't used
    - JACK: use jack_client_open instead of the deprecated
      jack_client_new
    - added (experimental) CoreAudio driver
    - applied old fixes to the ASIO driver that were included in the
      previous binary release but accidentally never committed to CVS
      (fixes #117)
    - fixes for ASIO on mingw-w64 (iasio wrapper is not needed on
      win64)
    - VST: added support for sample rate and buffer size changes
    - VST: close editor (Fantasia) when the VST is removed
    - VST: avoid opening Fantasia more than once for each VST instance
    - VST: export main function as "main" on Linux too (fix for
      energyXT)
    - VST: changed number of output channels from one stereo to 16
      stereo
    - added channel routing, fxsends and midi maps to the settings
      stored in the plugin state
    - performance optimization of AudioChannel::MixTo() and
      AudioChannel::CopyTo() methods using GCC vector exensions
      (if available)

  * MIDI driver:
    - added JACK MIDI driver
    - dispatch bank select as ordinary CC as well, the user might seriously
      want to (mis)use it for some purpose ("fixed" in all current MIDI